# NewDuel-Source-Code

./: .gitignore  CHANGELOG_CLIENT_LOCAL_v1.md  CMakeLists.txt
docs/: rs3_model_v1.md  rs3_scene_v1.md
src/: AppLogger.h  InputManager.cpp  InputManager.h  LoadingManager.cpp  LoadingManager.h  NakamaIPv4HttpTransport.cpp  NakamaIPv4HttpTransport.h  NakamaManager.cpp  NakamaManager.h  RenderManager.cpp  RenderManager.h  UIManager.cpp  UIManager.h  main.cpp
src/Character/: CharacterBuilder.cpp  CharacterBuilder.h  RenderedCharacter.cpp  RenderedCharacter.h
src/RealSpace3/Include/: CinematicPlayer.h  CinematicTimeline.h  DDSLoader.h  RBspObject.h  RDeviceDX11.h  RMesh.h  RMeshNode.h  RS3RenderTypes.h  RScene.h  RSkinObject.h  ResourceManager.h  SceneManager.h  ScenePackageLoader.h  StateManager.h  TextureManager.h  Types.h  WorldManager.h
src/RealSpace3/Include/Model/: CharacterAssembler.h  ModelPackageLoader.h  PbrMaterialSystem.h  SkeletonPlayer.h
src/RealSpace3/Source/: CinematicPlayer.cpp  CinematicTimeline.cpp  DDSLoader.cpp  Mesh.hlsl  RBspObject.cpp  RDeviceDX11.cpp  RMesh.cpp  RMeshNode.cpp  RScene.cpp  RSkinObject.cpp  SceneManager.cpp  ScenePackageLoader.cpp  StateManager.cpp  TextureManager.cpp
src/RealSpace3/Source/Model/: CharacterAssembler.cpp  ModelPackageLoader.cpp  PbrMaterialSystem.cpp  SkeletonPlayer.cpp
src/cine_studio/: main_cine.cpp
tools/elu_ani_to_glb/: README.md  elu_ani_to_glb.js
tools/glb_to_rs3_model/: README.md  glb_to_rs3_model.js
tools/model_audit/: README.md  export_asset_graph.js
tools/rs2_scene_converter/: README.md  rs2_scene_converter.js
tools/rs3_texture_converter/: README.md  rs3_texture_converter.js
ui/: character_selection.html  equip.html  loading.html  lobby.html  login.html  options.html  shop.html
